feat: added the 4 new endpoints for managing roles
CC-1229