@@ -19,9 +19,13 @@ import org.testcontainers.containers.MongoDBContainer;
 import org.testcontainers.junit.jupiter.Container;
 import org.testcontainers.junit.jupiter.Testcontainers;
 
-import uk.gov.companieshouse.accounts.user.models.UserRoles;
-import uk.gov.companieshouse.accounts.user.repositories.UserRolesRepository;
+import uk.gov.companieshouse.accounts.user.mapper.RolesDtoDaoMapper;
+import uk.gov.companieshouse.accounts.user.models.UserRole;
+import uk.gov.companieshouse.accounts.user.repositories.RolesRepository;
 import uk.gov.companieshouse.accounts.user.service.RolesService;
+import uk.gov.companieshouse.api.accounts.user.model.PermissionsList;
+import uk.gov.companieshouse.api.accounts.user.model.Role;
+import uk.gov.companieshouse.api.accounts.user.model.Roles;
 
 @SpringBootTest
 @Testcontainers(parallel = true)
@@ -36,13 +40,16 @@ public class UserRolesServiceTest {
     MongoTemplate mongoTemplate;
 
     @Autowired
-    UserRolesRepository userRolesRepository;
+    RolesDtoDaoMapper rolesDtoDaoMapper;
+
+    @Autowired
+    RolesRepository userRolesRepository;
 
     @Autowired
     RolesService rolesService;
 
-    private UserRoles admin = new UserRoles();
-    private UserRoles supervisor = new UserRoles();
+    private UserRole admin = new UserRole();
+    private UserRole supervisor = new UserRole();
     @BeforeEach
     void setup(){
         admin.setId("admin");
@@ -51,7 +58,7 @@ public class UserRolesServiceTest {
         supervisor.setId("supervisor");
         supervisor.setPermissions(List.of("permission3","permission4"));        
 
-        rolesService = new RolesService(userRolesRepository);
+        rolesService = new RolesService(userRolesRepository, rolesDtoDaoMapper);
 
         userRolesRepository.insert(List.of( admin,supervisor));
     }
@@ -59,17 +66,17 @@ public class UserRolesServiceTest {
     @Test
     @DisplayName("Test all roles are returned")
     void getAllRoles(){
-        RolesService rolesService = new RolesService(userRolesRepository);
-        List<UserRoles> roles =rolesService.getRoles();
+        Roles roles = rolesService.getRoles();
         assertEquals(2, roles.size());
     }
 
     @Test
     @DisplayName("Add a new role")
     void addNewRole(){
-        UserRoles fes = new UserRoles();       
+        Role fes = new Role();
+        PermissionsList fesPermissions =  new PermissionsList();
         fes.setId("fes");
-        fes.setPermissions(List.of("permission1","permission2"));
+        fes.setPermissions(fesPermissions);
         rolesService.addRole(fes);
         assertEquals(3, rolesService.getRoles().size());
     }
@@ -77,37 +84,45 @@ public class UserRolesServiceTest {
     @Test
     @DisplayName("Trying to add an existing role")
     void addNewRoleThatExistsAlready(){
-        admin.setPermissions(List.of("permission1","permission4"));
+        Role admin = new Role();
+        admin.setId("admin");
+        PermissionsList adminPermissions =  new PermissionsList();
+        adminPermissions.add("permission99");
+        admin.setPermissions(adminPermissions);
         rolesService.addRole(admin);
         assertEquals(2, rolesService.getRoles().size());
 
-        UserRoles role = rolesService.getRoles().get(0);
+        Role role = rolesService.getRoles().getFirst();
         assertEquals("admin", role.getId());
-        assertTrue(rolesService.getRoles().get(0).getPermissions().containsAll(List.of("permission1","permission2")));
+        assertTrue(rolesService.getRoles().getFirst().getPermissions().containsAll(List.of("permission1","permission2")));
     }
 
     @Test
     @DisplayName("Editing an existing role")
     void editingRole(){
-        admin.setPermissions(List.of("permission5","permission6"));
-        rolesService.editRole(admin);
+        PermissionsList adminPermissions =  new PermissionsList();
+        adminPermissions.add("permission99");
+        rolesService.editRole("admin", adminPermissions);
 
-        UserRoles role = rolesService.getRoles().get(0);
+        Role role = rolesService.getRoles().getFirst();
         assertEquals("admin", role.getId());
-        assertTrue(rolesService.getRoles().get(0).getPermissions().containsAll(List.of("permission5","permission6")));
+        assertTrue(rolesService.getRoles().getFirst().getPermissions().containsAll(List.of("permission99")));
     }    
+
+    
+
 
     @Test
     @DisplayName("Deleting a role")
     void deleteRole(){
-        rolesService.deleteRole(admin);
-        List<UserRoles> roles = rolesService.getRoles();
+        rolesService.deleteRole("admin");
+        Roles roles = rolesService.getRoles();
         assertFalse(roles.contains(admin));
     }
     
     @AfterEach
     public void after() {
-        mongoTemplate.dropCollection(UserRoles.class);
+        mongoTemplate.dropCollection(UserRole.class);
     }
 
 }
